--- a/OnlineTicketBooking/pom.xml
+++ b/OnlineTicketBooking/pom.xml
@@ -148,7 +148,7 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
-			<version>${spring.version}</version>
+			<version>4.3.9.RELEASE</version>
 		</dependency>
 		
 		<dependency>
