--- a/OnlineTicketBooking/pom.xml
+++ b/OnlineTicketBooking/pom.xml
@@ -173,6 +173,13 @@
 			<artifactId>hibernate-validator</artifactId>
 			<version>5.0.1.Final</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>1.9.5</version>
+			<scope>test</scope>
+		</dependency>
 		     
 	</dependencies>
     <build>
