--- a/OnlineTicketBooking/.classpath
+++ b/OnlineTicketBooking/.classpath
@@ -131,5 +131,28 @@
 			<attribute name="maven.scope" value="compile"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/TO-PW7-01/.m2/repository/org/mockito/mockito-all/1.9.5/mockito-all-1.9.5.jar" sourcepath="C:/Users/TO-PW7-01/.m2/repository/org/mockito/mockito-all/1.9.5/mockito-all-1.9.5-sources.jar">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="test" value="true"/>
+			<attribute name="org.eclipse.jst.component.nondependency" value=""/>
+			<attribute name="maven.groupId" value="org.mockito"/>
+			<attribute name="maven.artifactId" value="mockito-all"/>
+			<attribute name="maven.version" value="1.9.5"/>
+			<attribute name="maven.scope" value="test"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/TO-PW7-01/.m2/repository/org/mockito/mockito-core/1.9.5/mockito-core-1.9.5.jar" sourcepath="C:/Users/TO-PW7-01/.m2/repository/org/mockito/mockito-core/1.9.5/mockito-core-1.9.5-sources.jar">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="test" value="true"/>
+			<attribute name="org.eclipse.jst.component.nondependency" value=""/>
+			<attribute name="maven.groupId" value="org.mockito"/>
+			<attribute name="maven.artifactId" value="mockito-core"/>
+			<attribute name="maven.version" value="1.9.5"/>
+			<attribute name="maven.scope" value="test"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
