--- a/OnlineTicketBooking/pom.xml
+++ b/OnlineTicketBooking/pom.xml
@@ -180,6 +180,13 @@
 			<version>1.9.5</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+    <groupId>org.mockito</groupId>
+    <artifactId>mockito-core</artifactId>
+    <version>1.9.5</version>
+    <scope>test</scope>
+</dependency>
+		
 <dependency>
     <groupId>javax.mail</groupId>
     <artifactId>mail</artifactId>
